# text-statistics

./: .gitignore  LICENSE  README.md  README.org  flake.nix  pyproject.toml  reading_speed.py  requirements.txt  setup.py  word_count.py
.github/: README.org  README.org~
pkgs/charset-normalizer/: default.nix
pkgs/courlan/: default.nix
pkgs/htmldate/: default.nix
pkgs/justext/: default.nix
pkgs/py3langid/: default.nix
pkgs/trafilatura/: default.nix
src/: reading_speed.py  webservice.py
src/readingspeed/: main.py
src/readingtime/: grab_content.py  main.py  reading_speed.py  readingtime.py
src/text_statistics/: stats.py  webservice.py
